--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -30,7 +30,9 @@ jobs:
             ragel yasm nasm asciidoc enca gperf unzip p7zip gcc-multilib clang \
             python-pip curl openssl python-pipx
 
-          pipx install rst2pdf mako jsonschema
+          pipx install rst2pdf
+          pipx install mako
+          pipx install jsonschema
           git config --global user.name "github-actions"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global --add safe.directory $PWD
